# roscreate

./: .cproject  .gitignore  .project  Changelog  Makefile  README.md  make.bat  setup.py
jenkins/: CMakeLists.stack.txt  CMakeLists.txt  build_roscreate_tests  main.cpp
scripts/: roscreate-catkin-pkg  roscreate-catkin-pkg.bat  roscreate-comms-pkg  roscreate-comms-pkg.bat  roscreate-cpp-pkg  roscreate-cpp-ros-pkg  roscreate-cpp-ros-pkg.bat  roscreate-legacy-pkg  roscreate-pkg  roscreate-pkg.bat  roscreate-qt-legacy-pkg  roscreate-qt-pkg  roscreate-qt-pkg.bat  roscreate-stack  roscreate-stack.bat
src/roscreate/: __init__.py  commscreate.py  qtcreate.py  roscreate.py  utils.py
src/roscreate/templates/comms/: CMakeLists.txt  manifest.xml
src/roscreate/templates/qt-ros/: CMakeLists.txt
src/roscreate/templates/qt-ros-legacy/: CMakeLists.txt  manifest.xml
src/roscreate/templates/ros/: CMakeLists.txt  manifest.xml
src/roscreate/templates/ros-legacy/: manifest.xml
src/roscreate2/: __init__.py  commscreate.py  cppcreate.py  cpproscreate.py  qtcreate.py  roscreate.py  stackcreate.py  utils.py
src/roscreate2/templates/common/: mainpage.dox  manifest.xml
src/roscreate2/templates/comms/: CMakeLists.txt  manifest.xml
src/roscreate2/templates/cpp/: CMakeLists.txt  manifest.xml
src/roscreate2/templates/cpp-ros/: CMakeLists.txt
src/roscreate2/templates/cpp-ros/include/PACKAGE_NAME/: package_name.hpp
src/roscreate2/templates/cpp-ros/src/: CMakeLists.txt  main.cpp
src/roscreate2/templates/cpp-ros/src/lib/: package_name.cpp
src/roscreate2/templates/cpp/launch/: test.launch
src/roscreate2/templates/cpp/src/: CMakeLists.txt  main.cpp
src/roscreate2/templates/cpp/src/lib/: CMakeLists.txt  package_name.cpp
src/roscreate2/templates/qt-ros/: CMakeLists.txt  manifest.xml
src/roscreate2/templates/qt-ros-legacy/: CMakeLists.txt  manifest.xml
src/roscreate2/templates/qt-ros-legacy/include/PACKAGE_NAME/: main_window.hpp
src/roscreate2/templates/qt-ros-legacy/src/: main_window.cpp
src/roscreate2/templates/qt-ros/include/PACKAGE_NAME/: main_window.hpp  qnode.hpp
src/roscreate2/templates/qt-ros/src/: main.cpp  qnode.cpp
src/roscreate2/templates/ros/: CMakeLists.txt
src/roscreate2/templates/ros-legacy/: manifest.xml
src/roscreate2/templates/stack/: CMakeLists.txt  stack.xml
