##############################################################################
# Sources
##############################################################################

file(GLOB SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

##############################################################################
# Library
##############################################################################

add_library(%(name)s ${SOURCES})
target_link_libraries(%(name)s ${ROS_LIBRARIES})
